<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:focusableInTouchMode="true"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp" android:hint="@string/username"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/username" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/password"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/stay_logged_in" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/login"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="@+id/password"
    />
    <TextView
            android:text="@string/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/login" app:layout_constraintStart_toEndOf="@+id/login"
            app:layout_constraintBottom_toBottomOf="@+id/login"
            app:layout_constraintEnd_toStartOf="@+id/signup"
            app:layout_constraintHorizontal_bias="1"/>
    <TextView
            android:textAllCaps="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/error" app:layout_constraintTop_toBottomOf="@+id/signup"
            android:layout_marginTop="64dp" tools:text="error " android:textColor="@color/error"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:textAlignment="center"/>
    <CheckBox
            android:text="@string/stay_logged_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stay_logged_in"
            app:layout_constraintTop_toBottomOf="@+id/password" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/password"/>
</android.support.constraint.ConstraintLayout>